--- a/.kube/cronjob.yaml
+++ b/.kube/cronjob.yaml
@@ -3,19 +3,25 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: hello
+  name: on-hour
 spec:
-  schedule: "* * * * *"
+  schedule: "* * * * *" #At every minute. https://crontab.guru/
   jobTemplate:
     spec:
       template:
         spec:
           containers:
-          - name: hello
-            image: busybox:1.28
+          - name: on-hour
+            image: leaver2000/nuc-api:1.0.0
             imagePullPolicy: IfNotPresent
-            command:
-            - /bin/sh
-            - -c
-            - date; echo Hello from the Kubernetes cluster
+            command: 
+              - echo $(date +%Y-%m-%dT%H:%M:%SZ --utc):CronJob recorded >> app/cron.log 2>&1
+              # - echo CronJob recorded >> /app/cron.log 2>&1
+            # [
+            #   "/bin/sh", 
+            #   ""
+            #   "echo hello world >> /app/cron.log 2>&1"
+            #   # "NOW=$(date +'%Y-%m-%dT%H:%M:%SZ' --utc);", 
+            #   # "echo '${NOW}: CronJob recorded' >> /app/cron.log 2>&1'"
+            #   ]
           restartPolicy: OnFailure
